--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "jon-components": [
+        "dist/jon-components"
+      ],
+      "jon-components/*": [
+        "dist/jon-components/*"
+      ]
+    }
   }
 }
